<resources>
    <string name="app_name">SimpleTwitter</string>

    <string name="twitter_oauth_scheme" translatable="false"></string>
    <string name="twitter_oauth_host" translatable="false">mintminter.com</string>
    <string name="fullcallback" translatable="false">intent://%s#Intent;action=android.intent.action.VIEW;scheme=%s;package=%s;S.browser_fallback_url=%s;end</string>

    <string name="loading">Loading...</string>
    <string name="updating">Updating...</string>
    <string name="home">Home</string>
    <string name="tweet">Tweet</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="login">Log In With Twitter</string>
    <string name="draft_title">Draft founded</string>
    <string name="draft_des">Do you want to save your draft?</string>
    <string name="draft_yes">Yes, please.</string>
    <string name="draft_no">No, thank you.</string>
    <string name="detail_title">Tweet Detail</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_following">Following</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_tweets">Tweets</string>
    <string name="profile_photos">Photos</string>
    <string name="profile_likes">Likes</string>

</resources>
