<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mintminter.simpletwitter.activity.TimelineActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        style="@style/div"
        android:layout_height="@dimen/height_toolbar"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_toolbar_main">
        <RelativeLayout
            style="@style/div"
            android:layout_height="match_parent"
            android:paddingRight="20dp">
            <ImageView
                android:id="@+id/main_toolbar_avatar"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>
            <TextView
                style="@style/h1"
                android:layout_width="wrap_content"
                android:text="@string/home"
                android:textColor="@color/white"
                android:layout_toRightOf="@id/main_toolbar_avatar"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/main_toolbar_write"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ic_write"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/main_updating"
        style="@style/div.hlist"
        android:layout_height="40dp"
        android:background="@color/black_semi_99"
        android:layout_below="@id/main_toolbar"
        android:gravity="center">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"/>
        <TextView
            style="@style/sub"
            android:textColor="@color/colorAccent"
            android:text="@string/updating"
            android:layout_marginLeft="@dimen/margin_mid"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_loading"
        style="@style/div.hlist"
        android:layout_height="40dp"
        android:background="@color/black_semi_99"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"/>
        <TextView
            style="@style/sub"
            android:textColor="@color/colorAccent"
            android:text="@string/loading"
            android:layout_marginLeft="@dimen/margin_mid"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/main_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_updating"
        android:layout_above="@id/main_loading">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_timeline"
            style="@style/div"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
